--- a/src/html/layouts/default.hbs
+++ b/src/html/layouts/default.hbs
@@ -7,11 +7,15 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0">
 <meta name="format-detection" content="telephone=no">
 <title>Page Title</title>
+<link rel="stylesheet" type="text/css" href="css/all.css">
 </head>
 <body>
 {{#prettify}}
 {{> body}}
 {{/prettify}}
 <script src="js/app.js"></script>
+
+{{#block "overlay_module" ~}}
+{{/block ~}}
 </body>
 </html>
